--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,6 @@
 
-spring.datasource.url = jdbc:mysql://localhost:3306/dziennik
+spring.datasource.url = jdbc:mariadb://localhost:3306/dziennik
 spring.datasource.username = karol
 spring.datasource.password = 5554432
-
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.Target=System.out
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d{HH:mm:ss,SSS} %-5p [%c] - %m%n
-
-log4j.rootLogger=info, stdout
-# basic log level for all messages
-log4j.logger.org.hibernate=info
-
-# SQL statements and parameters
-log4j.logger.org.hibernate.SQL=debug
-log4j.logger.org.hibernate.type.descriptor.sql=trace
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
